@@ -1,7 +1,6 @@
 package be.seeseemelk.mockbukkit.block.data;
 
 import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableSet;
 import org.bukkit.Material;
 import org.bukkit.block.BlockFace;
 import org.bukkit.block.data.Directional;
@@ -11,17 +10,16 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.Set;
 
+import static be.seeseemelk.mockbukkit.block.data.BlockDataKey.FACING;
+import static be.seeseemelk.mockbukkit.block.data.BlockDataKey.WATERLOGGED;
+
 public class AmethystClusterMock extends BlockDataMock implements AmethystCluster, Directional, Waterlogged
 {
-
-	private static final String FACING = "facing";
-	private static final String WATERLOGGED = "waterlogged";
 
 	public AmethystClusterMock(@NotNull Material type)
 	{
 		super(type);
-		if (type != Material.AMETHYST_CLUSTER)
-			throw new IllegalArgumentException("Cannot create an AmethystClusterMock for " + type.name());
+		checkType(type, Material.AMETHYST_CLUSTER);
 		setFacing(BlockFace.NORTH);
 		setWaterlogged(false);
 	}
@@ -43,7 +41,7 @@ public class AmethystClusterMock extends BlockDataMock implements AmethystCluste
 	@Override
 	public @NotNull Set<BlockFace> getFaces()
 	{
-		return ImmutableSet.of(BlockFace.NORTH, BlockFace.EAST, BlockFace.SOUTH, BlockFace.WEST, BlockFace.UP, BlockFace.DOWN);
+		return Set.of(BlockFace.NORTH, BlockFace.EAST, BlockFace.SOUTH, BlockFace.WEST, BlockFace.UP, BlockFace.DOWN);
 	}
 
 	@Override
