@@ -1,28 +1,24 @@
 package be.seeseemelk.mockbukkit.block.data;
 
-import com.google.common.collect.ImmutableSet;
+import com.destroystokyo.paper.MaterialTags;
 import org.bukkit.Material;
-import org.bukkit.Tag;
 import org.bukkit.block.BlockFace;
 import org.bukkit.block.data.type.Bed;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Set;
 
+import static be.seeseemelk.mockbukkit.block.data.BlockDataKey.FACING;
+import static be.seeseemelk.mockbukkit.block.data.BlockDataKey.OCCUPIED;
+import static be.seeseemelk.mockbukkit.block.data.BlockDataKey.PART;
+
 public class BedMock extends BlockDataMock implements Bed
 {
-
-	private static final String PART = "part";
-	private static final String OCCUPIED = "occupied";
-	private static final String FACING = "facing";
 
 	public BedMock(@NotNull Material type)
 	{
 		super(type);
-		if (!Tag.BEDS.isTagged(type))
-		{
-			throw new IllegalArgumentException("Cannot create a BedMock from " + type);
-		}
+		checkType(type, MaterialTags.BEDS);
 		this.setFacing(BlockFace.NORTH);
 		super.set(OCCUPIED, false);
 		this.setPart(Part.FOOT);
@@ -47,6 +43,12 @@ public class BedMock extends BlockDataMock implements Bed
 	}
 
 	@Override
+	public void setOccupied(boolean occupied)
+	{
+		super.set(OCCUPIED, occupied);
+	}
+
+	@Override
 	public @NotNull BlockFace getFacing()
 	{
 		return super.get(FACING);
@@ -66,7 +68,7 @@ public class BedMock extends BlockDataMock implements Bed
 	@Override
 	public @NotNull Set<BlockFace> getFaces()
 	{
-		return ImmutableSet.of(BlockFace.NORTH, BlockFace.EAST, BlockFace.SOUTH, BlockFace.WEST);
+		return Set.of(BlockFace.NORTH, BlockFace.EAST, BlockFace.SOUTH, BlockFace.WEST);
 	}
 
 }
